# biologger-sim

./: .gitignore  .markdownlintignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  debug_keys.py  environment.yml  pyproject.toml  pytest.ini
.claude/: CLAUDE.md
.gemini/: GEMINI.md
.github/: copilot-instructions.md
.github/prompts/: plan-bootstrapBiologgerSim.prompt.md  plan-labFirstMvpImplementation.prompt.md
.github/workflows/: ci.yml
R/: swordRED_pseudotrack-clean.R
config/: Swordfish-RED001_20220812_19A0564-ahrs.yaml  Swordfish-RED001_20220812_19A0564-causal.yaml  Swordfish-RED001_20220812_19A0564-postfacto.yaml  WhaleShark-RED001_20250723_19A0564-postfacto.yaml
docs/analysis/: 20251229-omniverse-integration-research.md  20251230-biodt-ecosystem-positioning.md  20260113-acceleration-analysis.md
docs/planning/: omniverse_extension_spec.md  roadmap.md
docs/source/: api.rst  conf.py  getting_started.rst  index.rst  pipelines.rst  processors.rst
omniverse/: rendered_template_metadata.json
omniverse/apps/: config_multi_entity.kit  config_single_shark.kit  whoimpg.biologger.sim.kit
omniverse/assets/: README.md  blender_convert_tif_to_png.py  bowl.usda  generate_bowl.py  ocean_scene.usda  test_model_orientation.usda
refs/: Literature Review - Automated Animal Behavior Classification.bib  Literature Review - Automated Animal Behavior Classification.md
refs/technical/: MK10-User-Guide-printed.md  README.md
scripts/: bench_filter.py  compare_csv.py  setup_env.sh  validate_configs.py  zmq_rotate_test.py
tests/: conftest.py
(+130 files in other folders)
